desarrollo modulo body

--- a/desarrollo/src/main/resources/application.properties
+++ b/desarrollo/src/main/resources/application.properties
@@ -2,7 +2,11 @@ spring.datasource.url=jdbc:sqlserver://backend-nodo.database.windows.net:1433;da
 spring.datasource.username=adminsql
 spring.datasource.password=Backendreto2
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+
+
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
 
 
 
