creacion de endpoint generales

--- a/desarrollo/src/main/resources/application.properties
+++ b/desarrollo/src/main/resources/application.properties
@@ -1,14 +1,16 @@
+
 spring.datasource.url=jdbc:sqlserver://backend-nodo.database.windows.net:1433;database=reto-backend
 spring.datasource.username=adminsql
 spring.datasource.password=Backendreto2
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+server.servlet.max-request-size=1000MB
+server.servlet.max-file-size=1000MB
+#server.tomcat.chunkedEncoding=false
+
 
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-
-
-
 
 
