--- a/desarrollo/src/main/resources/application.properties
+++ b/desarrollo/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.servlet.max-request-size=1000MB
 server.servlet.max-file-size=1000MB
 #server.tomcat.chunkedEncoding=false
 
-
+spring.main.allow-bean-definition-overriding = true
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
